Feat: swaggerDocuments, Fix:CRUD
